<resources>
    <string name="app_name">CandidateRegister</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_candidate_register">Register</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_valid_email_password">Enter Valid Email and Password</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_date_of_birth">Date Of Birth</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_save_and_continue">Save and Continue</string>
    <string name="text_male">MALE</string>
    <string name="text_female">FEMALE</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_first_name">Enter First Name</string>
    <string name="error_message_last_name">Enter Last Name</string>
    <string name="error_message_date_of_birth">Enter Date Of Birth</string>
    <string name="error_message_Gender">Please select Gender</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_dob">DOB can not be blank</string>
    <string name="error_mobile_number">Mobile can not be blank</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>

    <string name="text_title">Android Tutorials Hub</string>
    <string name="text_accounts">All Accounts</string>
    <string name="text_dob">Date Of Birth</string>
    <string name="text_mobile_no">Mobile No</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_gender">Gender</string>
    <string name="update_success_message">Data Updated</string>
    <string name="EnterFirstName">errorFirstName</string>
    <string name="fill_all_details">Fill All Details</string>
    <string name="text_next">Next</string>
    <string name="text_0_years">0</string>
    <string name="text_1_year">1</string>
    <string name="text_2_year">2</string>
    <string name="text_save">Save</string>


    <string name="error_marks">Marks Should not be empty</string>
    <string name="error_institute">Institute can\'t be Empty</string>
    <string name="error_university">University can\'t be empty</string>
    <string name="error_year">Year Not Mentioned</string>
    <string name="text_ssc_marks">SSC MARKS</string>
    <string name="text_institute_name">Institute Name</string>
    <string name="text_university_name">University Name</string>
    <string name="text_year_of_passing">Year Of Passing</string>
    <string name="text_intermediate_marks">Intermediate Marks</string>
    <string name="text_intermediate_institute_name">Intermediate Institute Name</string>
    <string name="text_intermediate_university_name">Intermediate University Name</string>
    <string name="text_graduation_marks">Graduation Marks</string>
    <string name="text_graduation_institute_name">Graduation Institute Name</string>
    <string name="text_graduation_university_name">Graduation University Name</string>
    <string name="text_post_graduation_marks">Post Graduation Marks</string>
    <string name="text_postgraduation_institute_name">PostGraduation Institute Name</string>
    <string name="text_postgraduation_university_name">PostGraduation University Name</string>
    <string name="text_year_gap">Year Gap</string>
    <string name="error_year_gap">Year Gap is not empty</string>
    <string name="text_secondary_details">Secondary details</string>
    <string name="text_intermediate_details">Intermediate details</string>
    <string name="text_graduation_details">Graduation details</string>
    <string name="text_postgraduation_details">PostGraduation details</string>
    <string name="text_educational_gaps">Educational Gaps</string>
    <string name="text_edit">Edit</string>

</resources>
